syntax = "proto3";

package  project;

option go_package = "github.com/dinhtp/lets-go-pbtype/project";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "github.com/dinhtp/lets-go-pbtype/employee/employee.proto";
// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Project{
    string id = 1;
    string company_id = 2;
    string name = 3;
    string code = 4;
    string status = 5;
    string description = 6;
    uint32 total_task = 7;
    repeated employee.Employee employee_in_project = 8;

    string created_at = 20;
    string updated_at = 21;
}

message OneProjectRequest{
    string id = 1;
}

message ListProjectRequest{
    uint32 page = 1;
    uint32 limit = 2;
    string created_at_min = 3;
    string created_at_max = 4;
    string search_field = 5;
    string search_value = 6;
    string company_id = 7;
}

message ListProjectResponse{
    repeated Project items = 1;
    uint32 max_page = 2;
    uint32 total_count = 3;
    uint32 page = 4;
    uint32 limit = 5;
}

service ProjectService {
    rpc Create(Project) returns (Project) {
        option (google.api.http) = {
            post: "/go/company/{company_id}/project"
            body: "*"
        };
    };

    rpc Update(Project) returns (Project) {
        option (google.api.http) = {
            put: "/go/project/{id}"
            body: "*"
        };
    };
    rpc Get(OneProjectRequest) returns (Project) {
        option (google.api.http) = {
            get: "/go/project/{id}"
        };
    };
    rpc List(ListProjectRequest) returns (ListProjectResponse) {
        option (google.api.http) = {
            get: "/go/projects"
        };
    };
    rpc Delete(OneProjectRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/go/project/{id}"
        };
    };
}